# PEA1

./: .gitignore  BrutForce.cpp  BrutForce.hpp  BruteForce.cpp  BruteForce.hpp  BruteForceStl.cpp  BruteForceStl.hpp  CMakeLists.txt  DynamicPrograming.cpp  DynamicPrograming.hpp  Graph.cpp  Graph.hpp  LICENSE  Makefile  README.md  main.cpp  test  test.cpp
report/: report.tex
src/: BranchAndBound.cpp  BranchAndBound.hpp  DynamicPrograming.hpp  Graph.cpp  Graph.hpp  Time.cpp
test_files/: results.as
